docs : frontend api module build
1. frontend api module build
2. fix error swag object name
