# backend/docs/swagger.json
@@ -189,19 +189,19 @@
                     "200": {
                         "description": "success",
                         "schema": {
-                            "type": "ojbect"
+                            "$ref": "#/definitions/response.Response"
                         }
                     },
                     "400": {
                         "description": "invalid competition id parameter",
                         "schema": {
-                            "type": "ojbect"
+                            "$ref": "#/definitions/response.ErrorIdResponse"
                         }
                     },
                     "500": {
                         "description": "Update Competition CurrentPhase Minus",
                         "schema": {
-                            "type": "ojbect"
+                            "$ref": "#/definitions/response.ErrorInternalErrorResponse"
                         }
                     }
                 }
@@ -227,19 +227,19 @@
                     "200": {
                         "description": "success",
                         "schema": {
-                            "type": "ojbect"
+                            "type": ""
                         }
                     },
                     "400": {
                         "description": "invalid competition id parameter",
                         "schema": {
-                            "type": "ojbect"
+                            "$ref": "#/definitions/response.ErrorIdResponse"
                         }
                     },
                     "500": {
                         "description": "Update Competition CurrentPhase Plus",
                         "schema": {
-                            "type": "ojbect"
+                            "$ref": "#/definitions/response.ErrorInternalErrorResponse"
                         }
                     }
                 }
@@ -265,25 +265,25 @@
                     "200": {
                         "description": "success",
                         "schema": {
-                            "type": "ojbect"
+                            "$ref": "#/definitions/response.Response"
                         }
                     },
                     "204": {
                         "description": "success, but no change",
                         "schema": {
-                            "type": "ojbect"
+                            "$ref": "#/definitions/response.Nill"
                         }
                     },
                     "400": {
                         "description": "invalid competition id parameter",
                         "schema": {
-                            "type": "ojbect"
+                            "$ref": "#/definitions/response.ErrorIdResponse"
                         }
                     },
                     "500": {
                         "description": "Update Competition Elimination Active",
                         "schema": {
-                            "type": "ojbect"
+                            "$ref": "#/definitions/response.ErrorInternalErrorResponse"
                         }
                     }
                 }
@@ -309,19 +309,19 @@
                     "200": {
                         "description": "success",
                         "schema": {
-                            "type": "ojbect"
+                            "$ref": "#/definitions/response.Response"
                         }
                     },
                     "400": {
                         "description": "invalid competition id parameter",
                         "schema": {
-                            "type": "ojbect"
+                            "$ref": "#/definitions/response.ErrorIdResponse"
                         }
                     },
                     "500": {
                         "description": "Get Competition with Groups Players Scores / Update Round Total Score / Update Player Total Score",
                         "schema": {
-                            "type": "ojbect"
+                            "$ref": "#/definitions/response.ErrorInternalErrorResponse"
                         }
                     }
                 }
@@ -571,25 +571,25 @@
                     "200": {
                         "description": "success",
                         "schema": {
-                            "type": "ojbect"
+                            "$ref": "#/definitions/response.Response"
                         }
                     },
                     "204": {
                         "description": "success, but no change",
                         "schema": {
-                            "type": "ojbect"
+                            "$ref": "#/definitions/response.Nill"
                         }
                     },
                     "400": {
                         "description": "invalid competition id parameter",
                         "schema": {
-                            "type": "ojbect"
+                            "$ref": "#/definitions/response.ErrorIdResponse"
                         }
                     },
                     "500": {
                         "description": "Update Competition Mixed Elimination Active / Get Competition Group Ids / Post Elimination By Id",
                         "schema": {
-                            "type": "ojbect"
+                            "$ref": "#/definitions/response.ErrorInternalErrorResponse"
                         }
                     }
                 }
@@ -671,19 +671,19 @@
                     "200": {
                         "description": "success",
                         "schema": {
-                            "type": "ojbect"
+                            "$ref": "#/definitions/response.Response"
                         }
                     },
                     "400": {
                         "description": "invalid competition id parameter",
                         "schema": {
-                            "type": "ojbect"
+                            "$ref": "#/definitions/response.ErrorIdResponse"
                         }
                     },
                     "500": {
                         "description": "Update Competition Qualification CurrentEnd Minus",
                         "schema": {
-                            "type": "ojbect"
+                            "$ref": "#/definitions/response.ErrorInternalErrorResponse"
                         }
                     }
                 }
@@ -709,19 +709,19 @@
                     "200": {
                         "description": "success",
                         "schema": {
-                            "type": "ojbect"
+                            "$ref": "#/definitions/response.Response"
                         }
                     },
                     "400": {
                         "description": "invalid competition id parameter",
                         "schema": {
-                            "type": "ojbect"
+                            "$ref": "#/definitions/response.ErrorIdResponse"
                         }
                     },
                     "500": {
                         "description": "Update Competition Qualification CurrentEnd Plus",
                         "schema": {
-                            "type": "ojbect"
+                            "$ref": "#/definitions/response.ErrorInternalErrorResponse"
                         }
                     }
                 }
@@ -747,25 +747,25 @@
                     "200": {
                         "description": "success",
                         "schema": {
-                            "type": "ojbect"
+                            "$ref": "#/definitions/response.Response"
                         }
                     },
                     "204": {
                         "description": "success, but no change",
                         "schema": {
-                            "type": "ojbect"
+                            "$ref": "#/definitions/response.Nill"
                         }
                     },
                     "400": {
                         "description": "invalid competition id parameter",
                         "schema": {
-                            "type": "ojbect"
+                            "$ref": "#/definitions/response.ErrorIdResponse"
                         }
                     },
                     "500": {
                         "description": "Update Competition Qualification Active",
                         "schema": {
-                            "type": "ojbect"
+                            "$ref": "#/definitions/response.ErrorInternalErrorResponse"
                         }
                     }
                 }
@@ -849,25 +849,25 @@
                     "200": {
                         "description": "success",
                         "schema": {
-                            "type": "ojbect"
+                            "$ref": "#/definitions/response.Response"
                         }
                     },
                     "204": {
                         "description": "success, but no change",
                         "schema": {
-                            "type": "ojbect"
+                            "$ref": "#/definitions/response.Nill"
                         }
                     },
                     "400": {
                         "description": "invalid competition id parameter",
                         "schema": {
-                            "type": "ojbect"
+                            "$ref": "#/definitions/response.ErrorIdResponse"
                         }
                     },
                     "500": {
                         "description": "Update Competition Team Elimination Active / Get Competition Group Ids / Post Elimination By Id",
                         "schema": {
-                            "type": "ojbect"
+                            "$ref": "#/definitions/response.ErrorInternalErrorResponse"
                         }
                     }
                 }
